--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -14,7 +14,7 @@
     <div class="text-editor">
       <input placeholder="Your Code" id="code" type="text">
       <br></br>
-      <button onclick="refresh()">Save</button>
+      <button onclick="refresh()">Send</button>
     </div>
     <div class="response">
       <h1 id="responsive-page">Code</h1>
