--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -12,7 +12,11 @@
 <body>
   <div class="app">
     <div class="text-editor">
-      <input placeholder="Your Code" id="code" type="text">
+      <h2>HTML</h2>
+      <input placeholder="Your Code" id="code-html" type="text">
+      <br></br>
+      <h2>CSS</h2>
+      <input placeholder="Your Code" id="code-css" type="text">
     </div>
     <div class="response">
       <h1 id="responsive-page">Code</h1>
