--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -17,9 +17,13 @@
       <br></br>
       <h2>CSS</h2>
       <input placeholder="Your Code" id="code-css" type="text">
+      <br></br>
+      <br></br>
+      <br></br>
+      <button onclick="download()">Download</button>
     </div>
     <div class="response">
-      <h1 id="responsive-page">Code</h1>
+      <h1 id="responsive-page">Let's Code!</h1>
     </div>
   </div>
 </body>
