--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -13,10 +13,13 @@
   <div class="app">
     <div class="text-editor">
       <h2>HTML</h2>
-      <input placeholder="Your Code" id="code-html" type="text">
+      <textarea placeholder="Your Code" id="code-html" wrap="hard"></textarea>
       <br></br>
       <h2>CSS</h2>
-      <input placeholder="Your Code" id="code-css" type="text">
+      <textarea placeholder="Your Code" id="code-css" wrap="hard"></textarea>
+      <br></br>
+      <h2>JS</h2>
+      <textarea placeholder="Your Code" id="code-js" wrap="hard"></textarea>
       <br></br>
       <br></br>
       <br></br>
