--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -25,8 +25,7 @@
       <br></br>
       <button onclick="download()">Download</button>
     </div>
-    <div class="response">
-      <h4 id="responsive-page">Let's Code!</h4>
+    <div class="response" id="responsive-page">
     </div>
   </div>
 </body>
