--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -13,13 +13,13 @@
   <div class="app">
     <div class="text-editor">
       <h2>HTML</h2>
-      <textarea placeholder="Your Code" id="code-html" wrap="hard" tabindex="1" autofocus="true" spellcheck="false"></textarea>
+      <textarea placeholder="Your Code" id="code-html" wrap="hard" tabindex="1" autofocus="true" spellcheck="false" class="editor"></textarea>
       <br></br>
       <h2>CSS</h2>
-      <textarea placeholder="Your Code" id="code-css" wrap="hard" tabindex="2" spellcheck="false"></textarea>
+      <textarea placeholder="Your Code" id="code-css" wrap="hard" tabindex="2" spellcheck="false" class="editor"></textarea>
       <br></br>
       <h2>JS</h2>
-      <textarea placeholder="Your Code" id="code-js" wrap="hard" tabindex="3" spellcheck="false"></textarea>
+      <textarea placeholder="Your Code" id="code-js" wrap="hard" tabindex="3" spellcheck="false" class="editor"></textarea>
       <br></br>
       <br></br>
       <br></br>
