--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     font-size: 30px;
     font-family: verdana;
     background: linear-gradient(90deg, rgba(166,76,184,1) 35%, rgba(0,212,255,1) 100%);
+    outline: none;
     transition-duration: 1s;
 }
 
