--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="open-dev">
 <h1>Open Dev Project</h1>
 <br></br>
-<h2>I created this project to help persons a create their own web pages and help to learn the basic of HTML, CSS and JavaScript.</h2>
+<h2>I created this project to help persons to create their own web pages and help to learn the basic of HTML, CSS and JavaScript.</h2>
 <br></br>
 <button onclick="openDev()">Go></button>
 </div>
