--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
 .open-dev{
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px;
+    border-color: rgba(166,76,184,1);
+    border-style: solid;
     margin: auto;
     color: white;
     background-color: black;
