--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap"rel="stylesheet">
   <title>Welcome!</title>
-  <link rel="shortcut icon" type="image/png" href="open-dev/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
