--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       <br></br>
       <button onclick="openDev()">Go></button>
     </div>
+    <br>
+    <div class="math">
+      <h1>Math</h1>
+      <br></br>
+      <h2>I created this project to train your math speed.</h2>
+      <br></br>
+      <button onclick="math()">Go></button>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
