--- a/math/index.html
+++ b/math/index.html
@@ -4,6 +4,7 @@
     <link rel="shortcut icon" type="image/png" href="../favicon.png"/>
 </head>
 <body>
+    <h2 class="Points" id="Points"></h2>
     <h1>Math Training</h1>
     <br>
     <h2 id="Display"></h2>
