--- a/math/index.html
+++ b/math/index.html
@@ -4,11 +4,13 @@
     <link rel="shortcut icon" type="image/png" href="../favicon.png"/>
 </head>
 <body>
-    <h2 class="Points" id="Points"></h2>
-    <h1>Math Training</h1>
-    <br>
-    <h2 id="Display"></h2>
-    <input type="number" placeholder="Result" id="Answer" class="Answer">
-    <h2 id="gameResult"></h2>
+    <div class="gameGroup">
+        <h2 class="Points" id="Points"></h2>
+        <h1 class="content">Math Training</h1>
+        <br>
+        <h2 id="Display" class="content"></h2>
+        <input type="number" placeholder="Result" id="Answer" class="Answer">
+        <h2 id="gameResult" class="content"></h2>
+    </div>
     <script src="js/script.js"></script>
 </body>
