--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       <br></br>
       <button onclick="math()">Go></button>
     </div>
+    <br>
+    <div class="calculator">
+      <h1>Calculator</h1>
+      <br></br>
+      <h2>One calculator that I made to train my coding experience.</h2>
+      <br></br>
+      <button onclick="calculator()">Go></button>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
