--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       <br></br>
       <button onclick="calculator()">Go></button>
     </div>
+    <br></br>
+    <div class="musicsword">
+      <h1>Music Sword</h1>
+      <br></br>
+      <h2>It's a game that is based on Beat Saber for web and not VR</h2>
+      <br></br>
+      <button onclick="musicsword()">Go></button>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
