--- a/musicsword/index.html
+++ b/musicsword/index.html
@@ -70,7 +70,9 @@
                 sword.position.y = ((event.pageY - event.pageY * 2) / 100) + 5;
 
                 sword.rotation.x = (event.pageY - event.pageY * 2) / 400;
-                sword.rotation.z = (event.pageX - event.pageX * 2) / 150;
+                if (event.pageX >= 300 && event.pageX <= 600){
+                    sword.rotation.z = (event.pageX - event.pageX * 2) / 150;
+                }
 
                 renderer.render(scene,camera)
             });
