New Project and Code Reformulation

--- a/index.html
+++ b/index.html
@@ -15,36 +15,44 @@
     <br></br>
     <h2 class="title-my-projects" id="title-my-projects">< My Projects ></h2>
     <br></br>
-    <div class="open-dev">
+    <div class="project">
       <h1>Open Dev Project</h1>
       <br></br>
       <h2>I created this project to help persons to create their own web pages and help to learn the basic of HTML, CSS and JavaScript.</h2>
       <br></br>
-      <button onclick="openDev()">Go></button>
+      <button onclick="redirect('https://capelosini.github.io/open-dev/')">Go></button>
     </div>
     <br>
-    <div class="math">
+    <div class="project">
       <h1>Math</h1>
       <br></br>
       <h2>I created this project to train your math speed.</h2>
       <br></br>
-      <button onclick="math()">Go></button>
+      <button onclick="redirect('https://capelosini.github.io/math/')">Go></button>
     </div>
     <br>
-    <div class="calculator">
+    <div class="project">
       <h1>Calculator</h1>
       <br></br>
       <h2>One calculator that I made to train my coding experience.</h2>
       <br></br>
-      <button onclick="calculator()">Go></button>
+      <button onclick="redirect('https://capelosini.github.io/calculator/')">Go></button>
     </div>
     <br></br>
-    <div class="musicsword">
+    <div class="project">
       <h1>Music Sword</h1>
       <br></br>
       <h2>It's a game that is based on Beat Saber for web and not VR</h2>
       <br></br>
-      <button onclick="musicsword()">Go></button>
+      <button onclick="redirect('https://capelosini.github.io/musicsword/')">Go></button>
+    </div>
+    <br></br>
+    <div class="project">
+      <h1>Infinity Bonk</h1>
+      <br></br>
+      <h2>A Project to simulate the 'NO SIGNAL' on old TVs, but more funny</h2>
+      <br></br>
+      <button onclick="redirect('https://capelosini.github.io/infinitybonk/')">Go></button>
     </div>
   </div>
   <script src="script.js"></script>
