--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -7,13 +7,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/png" href="../favicon.png"/>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <title>OpenDev</title>
 </head>
 <body>
   <div class="app">
     <div class="text-editor">
-      <img src="rocket.svg" id="rocket"> 
+      <div class="head">
+        <img src="rocket.svg" id="rocket">
+        <button id="basehtml" class="btn btn-outline-warning">Base HTML</button>
+      </div> 
       <h2>HTML</h2>
       <div id="code-html" autofocus="true" class="editor"></div>
       <br></br>
@@ -30,6 +32,7 @@
     </div>
   </div>
   <script src="https://unpkg.com/monaco-editor@0.24.0/min/vs/loader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
