--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -15,24 +15,24 @@
       <div class="head">
         <img src="rocket.svg" id="rocket">
         <button id="basehtml" class="btn btn-outline-warning">Base HTML</button>
-      </div> 
-      <h2>HTML</h2>
+      </div>
+      <div id="Selector">
+        <button title="html" class="sbtn btn btn-primary">HTML</button>
+        <button title="css" class="sbtn btn btn-outline-primary">CSS</button>
+        <button title="js" class="sbtn btn btn-outline-primary">JS</button>
+      </div>
       <div id="code-html" autofocus="true" class="editor"></div>
-      <br></br>
-      <h2>CSS</h2>
       <div id="code-css" class="editor"></div>
-      <br></br>
-      <h2>JS</h2>
       <div id="code-js" class="editor"></div>
-      <br></br>
-      <br></br>
-      <br></br>
     </div>
     <div class="response" id="responsive-page">
+      <iframe id="DisplayI" src=""></iframe>
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/monaco-editor@0.24.0/min/vs/loader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
+  <img id="wave" src="wave.svg">
 </body>
 </html>
