Add project 'Watch 2 Gether' and new images for each project

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <br></br>
       <h2>I created this project to help persons to create their own web pages and help to learn the basic of HTML, CSS and JavaScript.</h2>
       <br></br>
+      <img src="open-dev/thumb.png">
+      <br></br>
       <button onclick="redirect('https://capelosini.github.io/open-dev/')">Go></button>
     </div>
     <br>
@@ -28,11 +30,15 @@
       <br></br>
       <h2>I created this project to train your math speed.</h2>
       <br></br>
+      <img src="math/thumb.png">
+      <br></br>
       <button onclick="redirect('https://capelosini.github.io/math/')">Go></button>
     </div>
     <br>
     <div class="project">
       <h1>Calculator</h1>
+      <br></br>
+      <img src="calculator/thumb.png">
       <br></br>
       <h2>One calculator that I made to train my coding experience.</h2>
       <br></br>
@@ -42,6 +48,8 @@
     <div class="project">
       <h1>Music Sword</h1>
       <br></br>
+      <img src="musicsword/thumb.png">
+      <br></br>
       <h2>It's a game that is based on Beat Saber for web and not VR</h2>
       <br></br>
       <button onclick="redirect('https://capelosini.github.io/musicsword/')">Go></button>
@@ -50,9 +58,21 @@
     <div class="project">
       <h1>Infinity Bonk</h1>
       <br></br>
+      <img src="infinitybonk/thumb.png">
+      <br></br>
       <h2>A Project to simulate the 'NO SIGNAL' on old TVs, but more funny</h2>
       <br></br>
       <button onclick="redirect('https://capelosini.github.io/infinitybonk/')">Go></button>
+    </div>
+    <br></br>
+    <div class="project">
+      <h1>Watch 2 Gether</h1>
+      <br></br>
+      <img src="watch2gether/thumb.png">
+      <br></br>
+      <h2>Some times you want to watch movies or videos with your friends, now you can!</h2>
+      <br></br>
+      <button onclick="redirect('https://watch-2gether.herokuapp.com/')">Go></button>
     </div>
   </div>
   <script src="script.js"></script>
