Code improvement and download stuff

--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -14,7 +14,7 @@
     <div class="text-editor">
       <div class="head">
         <img src="rocket.svg" id="rocket">
-        <button id="basehtml" class="btn btn-outline-warning">Base HTML</button>
+        <button id="basehtml" class="btn btn-outline-warning">HTML Template</button>
       </div>
       <div id="Selector">
         <button title="html" class="sbtn btn btn-primary">HTML</button>
