Fix the two first project descriptions position and change some visual things

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap"rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neuefamily=Staatliches&display=swap"rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Welcome!</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -16,27 +16,27 @@
     <br></br>
     <h2 class="title-my-projects" id="title-my-projects">< My Projects ></h2>
     <br></br>
-    <div class="project" data-aos="flip-right" data-aos-anchor-placement="top-center">
+    <div class="project">
       <h1>Open Dev Project</h1>
       <br></br>
-      <h2>I created this project to help people on creating their own web pages and helping them to learn the basic of HTML, CSS and JavaScript.</h2>
-      <br></br>
       <img src="open-dev/thumb.png">
+      <br></br>
+      <h2>I created this project to help people on creating their own web pages and helping them to learn the basic of HTML, CSS and JavaScript.</h2>
       <br></br>
       <button><a href="/open-dev" target="_blank">Go></a></button>
     </div>
     <br>
-    <div class="project" data-aos="flip-right" data-aos-anchor-placement="top-center">
+    <div class="project">
       <h1>Math</h1>
       <br></br>
-      <h2>I created this project to train your math speed.</h2>
-      <br></br>
       <img src="math/thumb.png">
+      <br></br>
+      <h2>I created this project to train your math speed.</h2>
       <br></br>
       <button><a href="/math" target="_blank">Go></a></button>
     </div>
     <br>
-    <div class="project" data-aos="flip-right" data-aos-anchor-placement="top-center">
+    <div class="project">
       <h1>Calculator</h1>
       <br></br>
       <img src="calculator/thumb.png">
@@ -46,7 +46,7 @@
       <button><a href="/calculator" target="_blank">Go></a></button>
     </div>
     <br></br>
-    <div class="project" data-aos="flip-right" data-aos-anchor-placement="top-center">
+    <div class="project">
       <h1>Music Sword</h1>
       <br></br>
       <img src="musicsword/thumb.png">
@@ -56,7 +56,7 @@
       <button><a href="/musicsword" target="_blank">Go></a></button>
     </div>
     <br></br>
-    <div class="project" data-aos="flip-right" data-aos-anchor-placement="top-center">
+    <div class="project">
       <h1>Infinity Bonk</h1>
       <br></br>
       <img src="infinitybonk/thumb.png">
@@ -66,7 +66,7 @@
       <button><a href="/infinitybonk" target="_blank">Go></a></button>
     </div>
     <br></br>
-    <div class="project" data-aos="flip-right" data-aos-anchor-placement="top-center">
+    <div class="project">
       <h1>Watch 2 Gether</h1>
       <br></br>
       <img src="watch2gether/thumb.png">
