--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/png" href="../favicon.png"/>
   <title>OpenDev</title>
@@ -20,7 +23,9 @@
         <button title="html" class="sbtn btn btn-primary">HTML</button>
         <button title="css" class="sbtn btn btn-outline-primary">CSS</button>
         <button title="js" class="sbtn btn btn-outline-primary">JS</button>
+        <button class="btn btn-outline-light" onclick="$('#configPanel').removeClass('hidden')">Config</button>
       </div>
+      
       <div id="code-html" autofocus="true" class="editor"></div>
       <div id="code-css" class="editor"></div>
       <div id="code-js" class="editor"></div>
@@ -28,10 +33,334 @@
     <div class="response" id="responsive-page">
       <iframe id="DisplayI" src=""></iframe>
     </div>
+    <div id="configPanel" class="hidden">
+      <button style="position: absolute; top: 10px; right: 10px; border: none; color: #fff; background-color: transparent;" onclick="$('#configPanel').addClass('hidden')">X</button>
+      <div style="display: inline-block; padding: 10px;">
+        <label for="" style="display: block;">Bootstrap</label>
+        <select id="bootstrapVersion" class="form-select">
+          <option value="none">None</option>
+          <option value="latest">Latest</option>
+          <option value="5.3.2">5.3.2</option>
+          <option value="5.3.1">5.3.1</option>
+          <option value="5.3.0">5.3.0</option>
+          <option value="5.3.0-alpha3">5.3.0-alpha3</option>
+          <option value="5.3.0-alpha2">5.3.0-alpha2</option>
+          <option value="5.3.0-alpha1">5.3.0-alpha1</option>
+          <option value="5.2.3">5.2.3</option>
+          <option value="5.2.2">5.2.2</option>
+          <option value="5.2.1">5.2.1</option>
+          <option value="5.2.0">5.2.0</option>
+          <option value="5.2.0-beta1">5.2.0-beta1</option>
+          <option value="5.1.3">5.1.3</option>
+          <option value="5.1.2">5.1.2</option>
+          <option value="5.1.1">5.1.1</option>
+          <option value="5.1.0">5.1.0</option>
+          <option value="5.0.2">5.0.2</option>
+          <option value="5.0.1">5.0.1</option>
+          <option value="5.0.0">5.0.0</option>
+          <option value="5.0.0-beta3">5.0.0-beta3</option>
+          <option value="5.0.0-beta2">5.0.0-beta2</option>
+          <option value="5.0.0-beta1">5.0.0-beta1</option>
+          <option value="5.0.0-alpha3">5.0.0-alpha3</option>
+          <option value="5.0.0-alpha2">5.0.0-alpha2</option>
+          <option value="5.0.0-alpha1">5.0.0-alpha1</option>
+          <option value="4.6.2">4.6.2</option>
+          <option value="4.6.1">4.6.1</option>
+          <option value="4.6.0">4.6.0</option>
+          <option value="4.5.3">4.5.3</option>
+          <option value="4.5.2">4.5.2</option>
+          <option value="4.5.1">4.5.1</option>
+          <option value="4.5.0">4.5.0</option>
+          <option value="4.4.1">4.4.1</option>
+          <option value="4.4.0">4.4.0</option>
+          <option value="4.3.1">4.3.1</option>
+          <option value="4.3.0">4.3.0</option>
+          <option value="4.2.1">4.2.1</option>
+          <option value="4.1.3">4.1.3</option>
+          <option value="4.1.2">4.1.2</option>
+          <option value="4.1.1">4.1.1</option>
+          <option value="4.1.0">4.1.0</option>
+          <option value="4.0.0">4.0.0</option>
+          <option value="4.0.0-beta.3">4.0.0-beta.3</option>
+          <option value="4.0.0-beta.2">4.0.0-beta.2</option>
+          <option value="4.0.0-beta">4.0.0-beta</option>
+          <option value="4.0.0-alpha.6">4.0.0-alpha.6</option>
+          <option value="4.0.0-alpha.5">4.0.0-alpha.5</option>
+          <option value="4.0.0-alpha.4">4.0.0-alpha.4</option>
+          <option value="4.0.0-alpha.3">4.0.0-alpha.3</option>
+          <option value="4.0.0-alpha.2">4.0.0-alpha.2</option>
+          <option value="3.4.1">3.4.1</option>
+          <option value="3.4.0">3.4.0</option>
+          <option value="3.3.7">3.3.7</option>
+          <option value="3.3.6">3.3.6</option>
+          <option value="3.3.5">3.3.5</option>
+          <option value="3.3.4">3.3.4</option>
+          <option value="3.3.2">3.3.2</option>
+          <option value="3.3.1">3.3.1</option>
+          <option value="3.3.0">3.3.0</option>
+          <option value="3.2.0">3.2.0</option>
+          <option value="3.1.1">3.1.1</option>
+          <option value="0.0.2">0.0.2</option>
+          <option value="0.0.1">0.0.1</option>
+          <option value="5.3.2">5.3.2</option>
+          <option value="5.3.1">5.3.1</option>
+          <option value="5.3.0">5.3.0</option>
+          <option value="5.3.0-alpha3">5.3.0-alpha3</option>
+          <option value="5.3.0-alpha2">5.3.0-alpha2</option>
+          <option value="5.3.0-alpha1">5.3.0-alpha1</option>
+          <option value="5.2.3">5.2.3</option>
+          <option value="5.2.2">5.2.2</option>
+          <option value="5.2.1">5.2.1</option>
+          <option value="5.2.0">5.2.0</option>
+          <option value="5.2.0-beta1">5.2.0-beta1</option>
+          <option value="5.1.3">5.1.3</option>
+          <option value="5.1.2">5.1.2</option>
+          <option value="5.1.1">5.1.1</option>
+          <option value="5.1.0">5.1.0</option>
+          <option value="5.0.2">5.0.2</option>
+          <option value="5.0.1">5.0.1</option>
+          <option value="5.0.0">5.0.0</option>
+          <option value="5.0.0-beta3">5.0.0-beta3</option>
+          <option value="5.0.0-beta2">5.0.0-beta2</option>
+          <option value="5.0.0-beta1">5.0.0-beta1</option>
+          <option value="5.0.0-alpha3">5.0.0-alpha3</option>
+          <option value="5.0.0-alpha2">5.0.0-alpha2</option>
+          <option value="5.0.0-alpha1">5.0.0-alpha1</option>
+          <option value="4.6.2">4.6.2</option>
+          <option value="4.6.1">4.6.1</option>
+          <option value="4.6.0">4.6.0</option>
+          <option value="4.5.3">4.5.3</option>
+          <option value="4.5.2">4.5.2</option>
+          <option value="4.5.1">4.5.1</option>
+          <option value="4.5.0">4.5.0</option>
+          <option value="4.4.1">4.4.1</option>
+          <option value="4.4.0">4.4.0</option>
+          <option value="4.3.1">4.3.1</option>
+          <option value="4.3.0">4.3.0</option>
+          <option value="4.2.1">4.2.1</option>
+          <option value="4.1.3">4.1.3</option>
+          <option value="4.1.2">4.1.2</option>
+          <option value="4.1.1">4.1.1</option>
+          <option value="4.1.0">4.1.0</option>
+          <option value="4.0.0">4.0.0</option>
+          <option value="4.0.0-beta.3">4.0.0-beta.3</option>
+          <option value="4.0.0-beta.2">4.0.0-beta.2</option>
+          <option value="4.0.0-beta">4.0.0-beta</option>
+          <option value="4.0.0-alpha.6">4.0.0-alpha.6</option>
+          <option value="4.0.0-alpha.5">4.0.0-alpha.5</option>
+          <option value="4.0.0-alpha.4">4.0.0-alpha.4</option>
+          <option value="4.0.0-alpha.3">4.0.0-alpha.3</option>
+          <option value="4.0.0-alpha.2">4.0.0-alpha.2</option>
+          <option value="3.4.1">3.4.1</option>
+          <option value="3.4.0">3.4.0</option>
+          <option value="3.3.7">3.3.7</option>
+          <option value="3.3.6">3.3.6</option>
+          <option value="3.3.5">3.3.5</option>
+          <option value="3.3.4">3.3.4</option>
+          <option value="3.3.2">3.3.2</option>
+          <option value="3.3.1">3.3.1</option>
+          <option value="3.3.0">3.3.0</option>
+          <option value="3.2.0">3.2.0</option>
+          <option value="3.1.1">3.1.1</option>
+          <option value="0.0.2">0.0.2</option>
+          <option value="0.0.1">0.0.1</option>
+        </select>
+      </div>
+      <div style="display: inline-block; padding: 10px;">
+        <label for="" style="display: block;">Jquery</label>
+        <select id="jqueryVersion" class="form-select">
+          <option value="none">None</option>
+          <option value="latest">Latest</option>
+          <option value="3.7.1">3.7.1</option>
+          <option value="3.7.0">3.7.0</option>
+          <option value="3.6.4">3.6.4</option>
+          <option value="3.6.3">3.6.3</option>
+          <option value="3.6.2">3.6.2</option>
+          <option value="3.6.1">3.6.1</option>
+          <option value="3.6.0">3.6.0</option>
+          <option value="3.5.1">3.5.1</option>
+          <option value="3.5.0">3.5.0</option>
+          <option value="3.4.1">3.4.1</option>
+          <option value="3.4.0">3.4.0</option>
+          <option value="3.3.1">3.3.1</option>
+          <option value="3.3.0">3.3.0</option>
+          <option value="3.2.1">3.2.1</option>
+          <option value="3.2.0">3.2.0</option>
+          <option value="3.1.1">3.1.1</option>
+          <option value="3.1.0">3.1.0</option>
+          <option value="3.0.0">3.0.0</option>
+          <option value="3.0.0-rc1">3.0.0-rc1</option>
+          <option value="3.0.0-beta1">3.0.0-beta1</option>
+          <option value="3.0.0-alpha1">3.0.0-alpha1</option>
+          <option value="2.2.4">2.2.4</option>
+          <option value="2.2.3">2.2.3</option>
+          <option value="2.2.2">2.2.2</option>
+          <option value="2.2.1">2.2.1</option>
+          <option value="2.2.0">2.2.0</option>
+          <option value="2.1.4">2.1.4</option>
+          <option value="2.1.3">2.1.3</option>
+          <option value="2.1.2">2.1.2</option>
+          <option value="2.1.1">2.1.1</option>
+          <option value="2.1.1-rc2">2.1.1-rc2</option>
+          <option value="2.1.1-rc1">2.1.1-rc1</option>
+          <option value="2.1.1-beta1">2.1.1-beta1</option>
+          <option value="2.1.0">2.1.0</option>
+          <option value="2.1.0-rc1">2.1.0-rc1</option>
+          <option value="2.1.0-beta3">2.1.0-beta3</option>
+          <option value="2.1.0-beta2">2.1.0-beta2</option>
+          <option value="1.12.4">1.12.4</option>
+          <option value="1.12.3">1.12.3</option>
+          <option value="1.12.2">1.12.2</option>
+          <option value="1.12.1">1.12.1</option>
+          <option value="1.12.0">1.12.0</option>
+          <option value="1.11.3">1.11.3</option>
+          <option value="1.11.2">1.11.2</option>
+          <option value="1.11.1">1.11.1</option>
+          <option value="1.11.1-rc2">1.11.1-rc2</option>
+          <option value="1.11.1-rc1">1.11.1-rc1</option>
+          <option value="1.11.1-beta1">1.11.1-beta1</option>
+          <option value="1.11.0">1.11.0</option>
+          <option value="1.11.0-rc1">1.11.0-rc1</option>
+          <option value="1.11.0-beta3">1.11.0-beta3</option>
+          <option value="1.9.1">1.9.1</option>
+          <option value="1.8.3">1.8.3</option>
+          <option value="1.8.2">1.8.2</option>
+          <option value="1.7.3">1.7.3</option>
+          <option value="1.7.2">1.7.2</option>
+          <option value="1.6.3">1.6.3</option>
+          <option value="1.6.2">1.6.2</option>
+          <option value="1.5.1">1.5.1</option>
+          <option value="3.7.1">3.7.1</option>
+          <option value="3.7.0">3.7.0</option>
+          <option value="3.6.4">3.6.4</option>
+          <option value="3.6.3">3.6.3</option>
+          <option value="3.6.2">3.6.2</option>
+          <option value="3.6.1">3.6.1</option>
+          <option value="3.6.0">3.6.0</option>
+          <option value="3.5.1">3.5.1</option>
+          <option value="3.5.0">3.5.0</option>
+          <option value="3.4.1">3.4.1</option>
+          <option value="3.4.0">3.4.0</option>
+          <option value="3.3.1">3.3.1</option>
+          <option value="3.3.0">3.3.0</option>
+          <option value="3.2.1">3.2.1</option>
+          <option value="3.2.0">3.2.0</option>
+          <option value="3.1.1">3.1.1</option>
+          <option value="3.1.0">3.1.0</option>
+          <option value="3.0.0">3.0.0</option>
+          <option value="3.0.0-rc1">3.0.0-rc1</option>
+          <option value="3.0.0-beta1">3.0.0-beta1</option>
+          <option value="3.0.0-alpha1">3.0.0-alpha1</option>
+          <option value="2.2.4">2.2.4</option>
+          <option value="2.2.3">2.2.3</option>
+          <option value="2.2.2">2.2.2</option>
+          <option value="2.2.1">2.2.1</option>
+          <option value="2.2.0">2.2.0</option>
+          <option value="2.1.4">2.1.4</option>
+          <option value="2.1.3">2.1.3</option>
+          <option value="2.1.2">2.1.2</option>
+          <option value="2.1.1">2.1.1</option>
+          <option value="2.1.1-rc2">2.1.1-rc2</option>
+          <option value="2.1.1-rc1">2.1.1-rc1</option>
+          <option value="2.1.1-beta1">2.1.1-beta1</option>
+          <option value="2.1.0">2.1.0</option>
+          <option value="2.1.0-rc1">2.1.0-rc1</option>
+          <option value="2.1.0-beta3">2.1.0-beta3</option>
+          <option value="2.1.0-beta2">2.1.0-beta2</option>
+          <option value="1.12.4">1.12.4</option>
+          <option value="1.12.3">1.12.3</option>
+          <option value="1.12.2">1.12.2</option>
+          <option value="1.12.1">1.12.1</option>
+          <option value="1.12.0">1.12.0</option>
+          <option value="1.11.3">1.11.3</option>
+          <option value="1.11.2">1.11.2</option>
+          <option value="1.11.1">1.11.1</option>
+          <option value="1.11.1-rc2">1.11.1-rc2</option>
+          <option value="1.11.1-rc1">1.11.1-rc1</option>
+          <option value="1.11.1-beta1">1.11.1-beta1</option>
+          <option value="1.11.0">1.11.0</option>
+          <option value="1.11.0-rc1">1.11.0-rc1</option>
+          <option value="1.11.0-beta3">1.11.0-beta3</option>
+          <option value="1.9.1">1.9.1</option>
+          <option value="1.8.3">1.8.3</option>
+          <option value="1.8.2">1.8.2</option>
+          <option value="1.7.3">1.7.3</option>
+          <option value="1.7.2">1.7.2</option>
+          <option value="1.6.3">1.6.3</option>
+          <option value="1.6.2">1.6.2</option>
+          <option value="1.5.1">1.5.1</option>
+        </select>
+      </div>
+      <div style="display: inline-block; padding: 10px;">
+        <label for="" style="display: block;">PicoCSS</label>
+        <select id="picoCssVersion" class="form-select">
+          <option value="none">None</option>
+          <option value="latest">Latest</option>
+          <option value="2.0.0-alpha1">2.0.0-alpha1</option>
+          <option value="1.5.10">1.5.10</option>
+          <option value="1.5.9">1.5.9</option>
+          <option value="1.5.8">1.5.8</option>
+          <option value="1.5.7">1.5.7</option>
+          <option value="1.5.6">1.5.6</option>
+          <option value="1.5.5">1.5.5</option>
+          <option value="1.5.4">1.5.4</option>
+          <option value="1.5.3">1.5.3</option>
+          <option value="1.5.2">1.5.2</option>
+          <option value="1.5.1">1.5.1</option>
+          <option value="1.5.0">1.5.0</option>
+          <option value="1.4.4">1.4.4</option>
+          <option value="1.4.3">1.4.3</option>
+          <option value="1.4.2">1.4.2</option>
+          <option value="1.4.1">1.4.1</option>
+          <option value="1.4.0">1.4.0</option>
+          <option value="1.3.3">1.3.3</option>
+          <option value="1.3.2">1.3.2</option>
+          <option value="1.3.1">1.3.1</option>
+          <option value="1.3.0">1.3.0</option>
+          <option value="1.2.1">1.2.1</option>
+          <option value="1.2.0">1.2.0</option>
+          <option value="1.1.0">1.1.0</option>
+          <option value="1.0.6">1.0.6</option>
+          <option value="1.0.5">1.0.5</option>
+          <option value="1.0.4">1.0.4</option>
+          <option value="1.0.3">1.0.3</option>
+          <option value="1.0.2">1.0.2</option>
+          <option value="2.0.0-alpha1">2.0.0-alpha1</option>
+          <option value="1.5.10">1.5.10</option>
+          <option value="1.5.9">1.5.9</option>
+          <option value="1.5.8">1.5.8</option>
+          <option value="1.5.7">1.5.7</option>
+          <option value="1.5.6">1.5.6</option>
+          <option value="1.5.5">1.5.5</option>
+          <option value="1.5.4">1.5.4</option>
+          <option value="1.5.3">1.5.3</option>
+          <option value="1.5.2">1.5.2</option>
+          <option value="1.5.1">1.5.1</option>
+          <option value="1.5.0">1.5.0</option>
+          <option value="1.4.4">1.4.4</option>
+          <option value="1.4.3">1.4.3</option>
+          <option value="1.4.2">1.4.2</option>
+          <option value="1.4.1">1.4.1</option>
+          <option value="1.4.0">1.4.0</option>
+          <option value="1.3.3">1.3.3</option>
+          <option value="1.3.2">1.3.2</option>
+          <option value="1.3.1">1.3.1</option>
+          <option value="1.3.0">1.3.0</option>
+          <option value="1.2.1">1.2.1</option>
+          <option value="1.2.0">1.2.0</option>
+          <option value="1.1.0">1.1.0</option>
+          <option value="1.0.6">1.0.6</option>
+          <option value="1.0.5">1.0.5</option>
+          <option value="1.0.4">1.0.4</option>
+          <option value="1.0.3">1.0.3</option>
+          <option value="1.0.2">1.0.2</option>
+        </select>
+      </div>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/monaco-editor@0.24.0/min/vs/loader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
   <img id="wave" src="wave.svg">
 </body>
