--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -7,8 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" type="image/png" href="../favicon.png"/>
   <title>OpenDev</title>
 </head>
@@ -23,7 +24,7 @@
         <button title="html" class="sbtn btn btn-primary">HTML</button>
         <button title="css" class="sbtn btn btn-outline-primary">CSS</button>
         <button title="js" class="sbtn btn btn-outline-primary">JS</button>
-        <button class="btn btn-outline-light" onclick="$('#configPanel').removeClass('hidden')">Config</button>
+        <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#configPanel">Config</button>
       </div>
       
       <div id="code-html" autofocus="true" class="editor"></div>
@@ -33,34 +34,42 @@
     <div class="response" id="responsive-page">
       <iframe id="DisplayI" src=""></iframe>
     </div>
-    <div id="configPanel" class="hidden">
-      <button style="position: absolute; top: 10px; right: 10px; border: none; color: #fff; background-color: transparent;" onclick="$('#configPanel').addClass('hidden')">X</button>
-      <div style="display: inline-block; padding: 10px;">
-        <label for="" style="display: block;">Bootstrap</label>
-        <select id="bootstrapVersion" class="form-select">
-          <option value="none">None</option>
-          <option value="latest">Latest</option>
-        </select>
-      </div>
-      <div style="display: inline-block; padding: 10px;">
-        <label for="" style="display: block;">PicoCSS</label>
-        <select id="picoCssVersion" class="form-select">
-          <option value="none">None</option>
-          <option value="latest">Latest</option>
-        </select>
-      </div>
-      <div style="display: inline-block; padding: 10px;">
-        <label for="" style="display: block;">Jquery</label>
-        <select id="jqueryVersion" class="form-select">
-          <option value="none">None</option>
-          <option value="latest">Latest</option>
-        </select>
+    <div class="modal fade" id="configPanel" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true" data-bs-theme="dark">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="ModalLabel">Frameworks Configuration</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div style="display: inline-block; padding: 10px;">
+              <label for="" style="display: block;">Bootstrap</label>
+              <select id="bootstrapVersion" class="form-select">
+                <option value="none">None</option>
+                <option value="latest">Latest</option>
+              </select>
+            </div>
+            <div style="display: inline-block; padding: 10px;">
+              <label for="" style="display: block;">PicoCSS</label>
+              <select id="picoCssVersion" class="form-select">
+                <option value="none">None</option>
+                <option value="latest">Latest</option>
+              </select>
+            </div>
+            <div style="display: inline-block; padding: 10px;">
+              <label for="" style="display: block;">Jquery</label>
+              <select id="jqueryVersion" class="form-select">
+                <option value="none">None</option>
+                <option value="latest">Latest</option>
+              </select>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/monaco-editor@0.24.0/min/vs/loader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
   <img id="wave" src="wave.svg">
 </body>
