--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
         <button title="html" class="sbtn btn btn-primary">HTML</button>
         <button title="css" class="sbtn btn btn-outline-primary">CSS</button>
         <button title="js" class="sbtn btn btn-outline-primary">JS</button>
-        <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#configPanel">Config</button>
+        <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#configPanel"><i class="bi bi-gear-fill"></i></button>
       </div>
       
       <div id="code-html" autofocus="true" class="editor"></div>
