Better performance and add tailwind framework, open-dev

--- a/open-dev/index.html
+++ b/open-dev/index.html
@@ -45,21 +45,28 @@
           <div class="modal-body">
             <div style="display: inline-block; padding: 10px;">
               <label for="" style="display: block;">Bootstrap</label>
-              <select id="bootstrapVersion" class="form-select">
+              <select id="bootstrapVersion" class="form-select config-select">
                 <option value="none">None</option>
                 <option value="latest">Latest</option>
               </select>
             </div>
             <div style="display: inline-block; padding: 10px;">
               <label for="" style="display: block;">PicoCSS</label>
-              <select id="picoCssVersion" class="form-select">
+              <select id="picoCssVersion" class="form-select config-select">
                 <option value="none">None</option>
                 <option value="latest">Latest</option>
               </select>
             </div>
             <div style="display: inline-block; padding: 10px;">
               <label for="" style="display: block;">Jquery</label>
-              <select id="jqueryVersion" class="form-select">
+              <select id="jqueryVersion" class="form-select config-select">
+                <option value="none">None</option>
+                <option value="latest">Latest</option>
+              </select>
+            </div>
+            <div style="display: inline-block; padding: 10px;">
+              <label for="" style="display: block;">Tailwind</label>
+              <select id="tailwindVersion" class="form-select config-select">
                 <option value="none">None</option>
                 <option value="latest">Latest</option>
               </select>
