Better look and code refactor

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neuefamily=Staatliches&display=swap"rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Welcome!</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -10,70 +11,65 @@
   <div class="welcome-div" data-aos="zoom-in-down" data-aos-duration="1000">
     <img src="favicon.png" class="mainImage">
     <h1 class="welcome">Welcome to my GitHub!</h1>
-    <br></br>
+    <br>
     <span class="scrollDownTextSpan">Scroll Down</span>
     </div>
-    <br></br>
+    <br>
     <h2 class="title-my-projects" id="title-my-projects">< My Projects ></h2>
-    <br></br>
+    <br>
     <div class="project">
       <h1>Open Dev Project</h1>
-      <br></br>
+      <br>
       <img src="open-dev/thumb.png">
-      <br></br>
-      <h2>I created this project to help people on creating their own web pages and helping them to learn the basic of HTML, CSS and JavaScript.</h2>
-      <br></br>
-      <button><a href="/open-dev" target="_blank">Go></a></button>
+      <br>
+      <p>I created this project to help people on creating their own web pages and helping them to learn the basic of HTML, CSS and JavaScript.</p>
+      <br>
+      <a class="projectButton" href="/open-dev" target="_blank">See</a>
     </div>
-    <br>
     <div class="project">
       <h1>Math</h1>
-      <br></br>
+      <br>
       <img src="math/thumb.png">
-      <br></br>
-      <h2>I created this project to train your math speed.</h2>
-      <br></br>
-      <button><a href="/math" target="_blank">Go></a></button>
+      <br>
+      <p>I created this project to train your math speed.</p>
+      <br>
+      <a class="projectButton" href="/math" target="_blank">See</a>
     </div>
-    <br>
     <div class="project">
       <h1>Calculator</h1>
-      <br></br>
+      <br>
       <img src="calculator/thumb.png">
-      <br></br>
-      <h2>One calculator that I made to train my coding experience.</h2>
-      <br></br>
-      <button><a href="/calculator" target="_blank">Go></a></button>
+      <br>
+      <p>One calculator that I made to train my coding experience.</p>
+      <br>
+      <a class="projectButton" href="/calculator" target="_blank">See</a>
     </div>
-    <br></br>
     <div class="project">
       <h1>Music Sword</h1>
-      <br></br>
+      <br>
       <img src="musicsword/thumb.png">
-      <br></br>
-      <h2>It's a game that is based on Beat Saber for web and not VR</h2>
-      <br></br>
-      <button><a href="/musicsword" target="_blank">Go></a></button>
+      <br>
+      <p>It's a game that is based on Beat Saber for web and not VR</p>
+      <br>
+      <a class="projectButton" href="/musicsword" target="_blank">See</a>
     </div>
-    <br></br>
     <div class="project">
       <h1>Infinity Bonk</h1>
-      <br></br>
+      <br>
       <img src="infinitybonk/thumb.png">
-      <br></br>
-      <h2>A Project to simulate the 'NO SIGNAL' on old TVs, but more funny</h2>
-      <br></br>
-      <button><a href="/infinitybonk" target="_blank">Go></a></button>
+      <br>
+      <p>A Project to simulate the 'NO SIGNAL' of old TVs, but different</p>
+      <br>
+      <a class="projectButton" href="/infinitybonk" target="_blank">See</a>
     </div>
-    <br></br>
     <div class="project">
       <h1>Watch 2 Gether</h1>
-      <br></br>
+      <br>
       <img src="watch2gether/thumb.png">
-      <br></br>
-      <h2>Some times you want to watch movies or videos with your friends, now you can!</h2>
-      <br></br>
-      <button><a href="https://github.com/capelosini/Watch2Gether" target="_blank">Go></a></button>
+      <br>
+      <p>Some times you want to watch movies or videos with your friends, now you can!</p>
+      <br>
+      <a class="projectButton" href="https://github.com/capelosini/Watch2Gether" target="_blank">See</a>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.2.min.js" integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
